# local-mac-audio-transcription

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: API.md  ARCHITECTURE.md  CPP_GUIDE.md  TESTING.md
examples/: package-lock.json
examples/web-client/: index.html  package.json
examples/web-client/src/: AudioCapture.ts  WhisperClient.ts  main.ts  types.ts
install/: com.whisper.stream-server.plist  install.sh  uninstall.sh
scripts/: build.sh  run.sh  run_tests.sh
src/: audio_buffer.cpp  audio_buffer.hpp  main.cpp  whisper_server.cpp  whisper_server.hpp
tests/e2e/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/e2e/tests/: connection.test.ts  context-leasing.test.ts  streaming.test.ts  vad-boundaries.test.ts
tests/e2e/utils/: TestClient.ts  WavLoader.ts
tests/integration/: test_transcription.cpp
tests/unit/: test_audio_buffer.cpp  test_vad_state_machine.cpp
